objects/BMCServiceDesk__Task_Service_Target__c.object
<CustomObject>
    <fields>
        <fullName>BMCServiceDesk__ClockPauseDate__c</fullName>
        <label>Clock Pause Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ClockState__c</fullName>
        <label>Clock</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Running</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paused</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stopped</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ElapsedTime__c</fullName>
        <label>Elapsed Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__EndDate__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKBusinessService__c</fullName>
        <formula>BMCServiceDesk__FKSLA__r.BMCServiceDesk__FKBusinessService__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKSLA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SLA</label>
        <referenceTo>BMCServiceDesk__ServiceLevelAgreement__c</referenceTo>
        <relationshipLabel>Task Service Targets</relationshipLabel>
        <relationshipName>Task_Service_Targets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKServiceTarget__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Target</label>
        <referenceTo>BMCServiceDesk__Service_Target__c</referenceTo>
        <relationshipLabel>Task Service Targets</relationshipLabel>
        <relationshipName>Task_Service_Targets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKTask__c</fullName>
        <label>Task</label>
        <referenceTo>BMCServiceDesk__Task__c</referenceTo>
        <relationshipLabel>Task Service Targets</relationshipLabel>
        <relationshipName>Task_Service_Targets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__IsCanceled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Canceled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PausedDuration__c</fullName>
        <label>Paused Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__SLAName__c</fullName>
        <formula>BMCServiceDesk__FKSLA__r.BMCServiceDesk__AgreementTitle__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ServiceTargetName__c</fullName>
        <formula>BMCServiceDesk__FKServiceTarget__r.BMCServiceDesk__Service_Target_Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Service_Target_Duration__c</fullName>
        <formula>BMCServiceDesk__FKServiceTarget__r.BMCServiceDesk__Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Target Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Service_Target_Support_Hours__c</fullName>
        <formula>BMCServiceDesk__FKServiceTarget__r.BMCServiceDesk__FKSupport_Hours__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Target Support Hours</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__StartDate__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__StateValue__c</fullName>
        <formula>IF(BMCServiceDesk__IsCanceled__c = true, $Label.BMCServiceDesk__ServiceTargetStatus_Canceled,
CASE( BMCServiceDesk__ClockState__c, &apos;Running&apos;, $Label.BMCServiceDesk__ServiceTargetStatus_In_process,
&apos;Paused&apos;, $Label.BMCServiceDesk__ServiceTargetStatus_Pending,
&apos;Stopped&apos;,$Label.BMCServiceDesk__ServiceTargetStatus_Completed,
$Label.BMCServiceDesk__ServiceTargetStatus_Attached))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Status__c</fullName>
        <formula>IF( BMCServiceDesk__IsCanceled__c = True , $Label.BMCServiceDesk__ServiceTargetStatus_Cancelled,
IF( ISNULL( BMCServiceDesk__TargetEndDate__c ) , $Label.BMCServiceDesk__ServiceTargetStatus_OK,
IF( ISNULL( BMCServiceDesk__EndDate__c ),
IF( ISNULL( BMCServiceDesk__ClockPauseDate__c ) ,
IF( BMCServiceDesk__TargetEndDate__c &gt; NOW() , IF( ISNULL(BMCServiceDesk__WarningTime__c) || BMCServiceDesk__WarningTime__c &gt; NOW() , $Label.BMCServiceDesk__ServiceTargetStatus_OK, $Label.BMCServiceDesk__ServiceTargetStatus_Warning) , $Label.BMCServiceDesk__ServiceTargetStatus_Missed) , IF( BMCServiceDesk__TargetEndDate__c &gt; BMCServiceDesk__ClockPauseDate__c , IF( ISNULL(BMCServiceDesk__WarningTime__c) || BMCServiceDesk__WarningTime__c &gt; BMCServiceDesk__ClockPauseDate__c , $Label.BMCServiceDesk__ServiceTargetStatus_OK, $Label.BMCServiceDesk__ServiceTargetStatus_Warning) , $Label.BMCServiceDesk__ServiceTargetStatus_Missed)),
IF( BMCServiceDesk__EndDate__c - BMCServiceDesk__TargetEndDate__c &gt; 0, $Label.BMCServiceDesk__ServiceTargetStatus_Missed, $Label.BMCServiceDesk__ServiceTargetStatus_Met
)
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__TargetBusinessDays__c</fullName>
        <label>Target Business Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__TargetEndDate__c</fullName>
        <label>Target End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__TargetTypeValue__c</fullName>
        <formula>BMCServiceDesk__FKServiceTarget__r.BMCServiceDesk__TargetTypeValue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Type~</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__TargetType__c</fullName>
        <formula>BMCServiceDesk__FKServiceTarget__r.BMCServiceDesk__Target_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Target_Duration__c</fullName>
        <label>Target Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Task__c</fullName>
        <formula>BMCServiceDesk__FKTask__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Task~</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__TimeRemaining__c</fullName>
        <label>Time Remaining</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__WarningTime__c</fullName>
        <label>Warning Time</label>
        <type>DateTime</type>
    </fields>
</CustomObject>